Added network grammar guider, and slight changes to readme, and other project files